--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run build  && touch out/.nojekyll && gh-pages -d out --dotfiles"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
